# Coverage_AI

./: CMakeLists.txt  Jenkinsfile  Makefile  README.md  ai_coverage_loop.groovy  ai_generate_promt.py  build_context.groovy  context_builder.groovy  coverage.sh  detect_need_for_tests.sh  generate_reqs.groovy  lcovParser.groovy  pipeline-parameters.groovy  rag_context_finder.py  requirements.md  requirements.txt  setup_env.sh  sha1Utils.groovy  summarize_code.py
coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_report/gtest/: gtest-printers.h.func-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/src/: index-sort-f.html  index-sort-l.html  index.html  number_to_string.cpp.func-c.html  number_to_string.cpp.func.html  number_to_string.cpp.gcov.html
googletest-release-1.11.0/: install_manifest.txt
reports/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_NumberToStringInt_Negative.GroupObject/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_NumberToStringInt_Negative.Int/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_NumberToStringInt_Positive.Int/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_NumberToStringInt_Zero.GroupObject/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_NumberToStringInt_Zero.Int/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_NumberToStringObject_Positive.GroupObject/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_ReturnNumberVariant1.Negative/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_ReturnNumberVariant1.Positive/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_ReturnNumberVariant1.Zero/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_ReturnNumberVariant2.Negative/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/coverage_report_ReturnNumberVariant2.Positive/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
reports/src/: index-sort-f.html  (+5 more)
src/: main.cpp  number_to_string.cpp  number_to_string.h
tests/: test_ai.cpp  test_number_to_string.cpp
(+191 files in other folders)
